Fixed bug where the flexbox container would go below the left menu bar if zoomed in too much

--- a/dashboard/src/App.css
+++ b/dashboard/src/App.css
@@ -9,9 +9,10 @@ a {
 }
 
 .GlobalMenuBar {
-    position: relative;
+    position: fixed;
     float: left;
-    height: 100vh;
+    width: 2rem;
+    height: 100%;
 
     background-color: #222222;
 
@@ -24,6 +25,7 @@ a {
     display: flex;
     flex-flow: column nowrap;
     justify-content: flex-start;
+    align-items: center;
 
     z-index: 99;
 }
@@ -35,7 +37,11 @@ a {
 }
 
 .DashboardMenu {
+    position: fixed;
     float: top;
+    width: 100%;
+    height: 3rem;
+    background: #151515;
 
     border-bottom-width: 0.1px;
     border-bottom-style: solid;
@@ -44,6 +50,9 @@ a {
     display: flex;
     flex-flow: row nowrap;
     justify-content: center;
+    align-items: center;
+
+    z-index: 98;
 }
 
 .DashboardMenu  button {
@@ -118,15 +127,19 @@ a {
 }
 
 .ChartContainer {
-    float: left;
+    position: absolute;
+    top: 3rem;
+    left: 3rem;
 
     display: flex;
     flex-flow: row wrap;
+    justify-content: space-between;
 }
 
 .ChartContainer .ChartItem {
     background-color: #222222;
     width: 500px;
+    max-width: 1000px;
     margin: 10px;
     padding: 10px;
 
@@ -136,6 +149,8 @@ a {
     border-width: 0.1px;
     border-style: solid;
     border-color: #717171;
+
+    flex: 2;
 }
 
 .ChartContainer .ChartItem button {
